--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="menuBotao">
                 
                 <button onClick="abrirMenu()">
-                    <span class="material-symbols-outlined">
+                    <span class="material-symbols-outlined" id="icone">
                         menu
                     </span>
                 </button>
