--- a/javascript.html
+++ b/javascript.html
@@ -68,14 +68,14 @@
           </div>
 
           <div class="col">
-            <label class="form-label">RESULTADO</label>
+            <label class="form-label">Resultado</label>
             <input type="text" class="form-control" placeholder="Resultado" aria-label="Resultado" name="Resultado"
               id="Resultado">
           </div>
 
 
         </div>
-        <button type="button" class="btn btn-primary btn-lg" onclick="somarValores()">Calcular</button>
+        <button type="button" id="btnSomar" class="btn btn-info">Calcular</button>
 
     </form>
   </main>
